--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/nav_home"
-        android:icon="@android:drawable/ic_menu_view"
-        android:title="@string/navigation_menu_home" />
+        android:icon="@drawable/ic_home_filled"
+        android:title="Home" />
 
     <item
         android:id="@+id/nav_search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@string/navigation_menu_pesquisar" />
+        android:icon="@drawable/ic_search"
+        android:title="Pesquisar" />
 
     <item
         android:id="@+id/nav_profile"
-        android:icon="@android:drawable/ic_menu_my_calendar"
-        android:title="@string/navigation_menu_perfil" />
+        android:icon="@drawable/ic_person_filled"
+        android:title="Perfil" />
 
 </menu>
