--- a/app/src/main/res/color/nav_item_colors.xml
+++ b/app/src/main/res/color/nav_item_colors.xml
@@ -3,6 +3,6 @@
 
     <item android:color="?attr/colorPrimary" android:state_checked="true" />
 
-    <item android:color="?android:attr/textColorSecondary" />
+    <item android:color="@color/black" />
 
 </selector>
