--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -11,7 +11,7 @@
         android:id="@+id/notifImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/circle_bg"
+        android:src="@drawable/ic_person_filled"
         android:scaleType="centerCrop"
         android:layout_marginEnd="12dp"/>
 
