--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -158,30 +158,31 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:background="@drawable/bg_rounded_border_black"
-                            android:padding="16dp"
+                            android:layout_marginBottom="20dp"
+                            android:background="@drawable/bg_rounded_border_black_transparent"
                             android:gravity="center"
-                            android:layout_marginBottom="20dp">
+                            android:orientation="vertical"
+                            android:padding="16dp">
 
                             <TextView
                                 android:id="@+id/profileCurso"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Curso..."
-                                android:textStyle="bold"
-                                android:textSize="15sp"
                                 android:textAlignment="center"
-                                android:textColor="?android:attr/textColorPrimary"/>
+                                android:textColor="?android:attr/textColorPrimary"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+
                             <TextView
                                 android:id="@+id/profileUni"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="4dp"
                                 android:text="Universidade..."
-                                android:textSize="13sp"
                                 android:textAlignment="center"
                                 android:textColor="?android:attr/textColorPrimary"
-                                android:layout_marginTop="4dp"/>
+                                android:textSize="13sp" />
                         </LinearLayout>
 
                         <Button
