--- a/app/src/main/res/drawable-night/bg_search_outline.xml
+++ b/app/src/main/res/drawable-night/bg_search_outline.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2C2C2C" />
+<solid android:color="@android:color/transparent" />
 
-    <stroke
-        android:width="1dp"
-        android:color="#757575" />
+<stroke
+    android:width="1dp"
+    android:color="@color/white" />
 
-    <corners android:radius="8dp" />
+<corners android:radius="8dp" />
 </shape>
