--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
     <color name="universe_background">#311B92</color>
 
     <color name="text_secondary">#757575</color>
+
+
+    <color name="nav_selected_color">#6200EE</color>
+
+    <color name="nav_unselected_color">#000000</color>
+
 </resources>
