--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/colorBackground"
-            android:paddingVertical="16dp"
+            android:paddingTop="20dp"
             android:paddingHorizontal="16dp"
             android:elevation="2dp"
             app:layout_constraintTop_toTopOf="parent">
